[project]
name = "abloc"
version = "0.1.0"
description = "Find whether you're gonna run out of air."
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "certifi>=2025.4.26",
    "nbformat>=5.10.4",
    "plotly>=6.1.2",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "pytest>=8.4.0",
    "rsconnect-python>=1.26.0",
    "seaborn>=0.13.2",
    "shiny>=1.4.0",
    "shinywidgets>=0.6.2",
]
